# dependency-solver-2019-ejhobbs

./: .gitignore  CMakeLists.txt  Makefile  README.md  constraints.c  constraints.h  file.c  file.h  main.c  main.h  package.c  relation.c  relation.h  repo_package.c  repo_package.h  repository.c  repository.h  solve  solver.c  solver.h  state.c  state.h
test/: relation_test.c  repository_test.c
